--- a/CGBFE/cgb2109/注册表单.html
+++ b/CGBFE/cgb2109/注册表单.html
@@ -3,11 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>注册表单</title>
-		<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;注册表单</h1>
+		<h1 align="center">注册表单</h1>
 	</head>
-	<body>
-		<table border="1" width="400" cellspacing="0" bgcolor="lightgray" bordercolor="red">
+	<body background="lydown.jpg">
+		<table align="center" border="1" width="400" cellspacing="0" bgcolor="lightgray" bordercolor="red">
 			<tr>
 				<td>用户名:</td>
 				<td colspan="10">
@@ -78,7 +77,21 @@
 					<img src="veri.png" width="50"/>
 					<button>换一张</button>
 				</td>
-			</tr>		
+			</tr>	
+			<tr>
+				<td>自我描述:</td>
+				<td width="300" height="100">
+					<textarea rows="8">
+						请输入描述信息。
+					</textarea>
+				</td>
+			</tr>	
+			<tr>
+				<td colspan="2" align="center">
+					<button type="button">确认</button>
+					<button type="button">重置</button>
+				</td>
+			</tr>
 		</table>
 	</body>
 </html>
