--- a/CGBFE/cgb2109/流量调查表.html
+++ b/CGBFE/cgb2109/流量调查表.html
@@ -6,7 +6,7 @@
 		<h1>流量调查表</h1>
 	</head>
 	<body>
-		<table border="1" width="350">
+		<table border="1" width="350" bgcolor="chartreuse" cellspacing="0">
 			<tr>
 				<td>总页面流量</td>
 				<td>共计来访</td>
