--- a/CGBFE/servlet01/servlet02.html
+++ b/CGBFE/servlet01/servlet02.html
@@ -41,11 +41,11 @@
 	<body>
 		<iframe  id="submitFrame" style="display: none;width:0; height:0" name="submitFrame"  src="about:blank"></iframe> 
 		
-		<form id="themeForm" method="get" action="http://localhost:8080/javaweb03_war_exploded/ServletDemo6" target="submitFrame">
+		<form id="themeForm" method="post" action="http://localhost:8080/javaweb03_war_exploded/ServletDemo6" target="submitFrame">
 			<div id="app">
 				<h3>注册账号</h3>
-					姓名:<input class="i"  type="text" placeholder="请输入姓名..." name="user" v-model="user"><br />
-					密码:<input class="i"  type="password" placeholder="请输入密码..." name="pwd" v-model="pwd"/><br />
+					姓名:<input class="i"  type="text" placeholder="请输入姓名..." name="user" v-model="user" required="required"><br />
+					密码:<input class="i"  type="password" placeholder="请输入密码..." name="pwd" v-model="pwd" required="required"/><br />
 				
 					<span v-if="user===''&&pwd===''">
 						<input class="nu" type="button" value="均为空值" @mouseenter="change()" :style="cha" @mouseleave="change2()" :style="cha"/>
@@ -68,7 +68,7 @@
 				new Vue({
 					el:"#app",
 					data: {
-						user: "",
+						user:"",
 						pwd: "",
 						cha:""
 					},
@@ -88,7 +88,7 @@
 			</script>
 		</form>
 		
-<!-- 		<form method="post" action="http://localhost:8080/javaweb03_war_exploded/ServletDemo5" target="submitFrame">
+<!-- 	<form method="post" action="http://localhost:8080/javaweb03_war_exploded/ServletDemo5" target="submitFrame">
 			<h3>post提交数据</h3>
 			姓名:<input type="text" placeholder="请输入姓名..." name="user" /><br />
 			密码:<input type="password" placeholder="请输入密码..." name="pwd" /><br />
