--- a/CGBFE/servlet01/testFE.html
+++ b/CGBFE/servlet01/testFE.html
@@ -52,7 +52,7 @@
 	<body>
 		<iframe  id="submitFrame" style="display: none;width:0; height:0" name="submitFrame"  src="about:blank"></iframe> 
 		
-		<form id="themeForm" method="post" action="http://localhost:8080/javaweb03_war_exploded/ServletFE01" target="submitFrame">
+		<form id="themeForm" method="post" action="http://localhost:8080/javaweb03_war_exploded/ServletFE01" >
 			<div><img  id = "pic" src="materials/l.png"/></div>
 			<div id="app">
 				<h3>提交大区信息</h3>
